Generative Graph System Ready (Jupyter)

--- a/CADD/AtomRNN_Module.ipynb
+++ b/CADD/AtomRNN_Module.ipynb
@@ -388,9 +388,9 @@
     "    Molecule Generation Game: The goal of this game is to generate molecules that satisfy certain criteria (such as net charge, size, etc.)\n",
     "    The generator returns one of 'N' characters (decided apriori), and the generation ends when the model generates a '0'\n",
     "'''\n",
-    "class MolGeneration(GenericDiscreteEnvironmentExtension,metaclass=abc.ABCMeta):\n",
+    "class RNNMolGenerationEnvironment(GenericDiscreteEnvironmentExtension,metaclass=abc.ABCMeta):\n",
     "    def __init__(self,num_tokens,max_len,end_on=0,startWith=None,score_fn=constantScore,fail_fn=constantScore,score_kws=dict(),fail_kws=dict()):\n",
-    "        super(MolGeneration,self).__init__((1,),getBoundedObservables((1,),0,num_tokens+1),num_tokens+1,False)\n",
+    "        super(RNNMolGenerationEnvironment,self).__init__((1,),getBoundedObservables((1,),0,num_tokens+1),num_tokens+1,False)\n",
     "        self.endtoken=end_on\n",
     "        self.num_tokens = num_tokens\n",
     "        self.maxlen = max_len\n",
@@ -433,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
