--- a/CADD/DeNovoReader.ipynb
+++ b/CADD/DeNovoReader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c84b95ad",
    "metadata": {},
    "outputs": [],
@@ -12,23 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "b51d5ff8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sys\n",
-    "from rdkit import Chem"
+    "from rdkit import Chem\n",
+    "import abc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "f3e1ff03",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
     "class DeNovoAtom:\n",
     "    def __init__(self,name,valence,mass,charge,sigma,eps,vdw=None,hybrid=None):\n",
     "        sigma = float(sigma)\n",
@@ -47,80 +49,333 @@
     "    \n",
     "    def __str__(self): return \"Atom Type: \"+self.atomtype\n",
     "    def __repr__(self): return str(self)\n",
+    "    def clone(self): return DeNovoAtom(self.atomtype,self.valence,self.mass,self.charge,self.sigma,self.epsilon,self.vdw,self.hybridization)\n",
+    "    \n",
+    "    def reduceValency(self,amt=1): self.valence-=amt\n",
     "            \n",
-    "            \n",
+    "class DeNovoRule:\n",
+    "    def __init__(self,targets,minc,maxc):\n",
+    "        self.targets=targets\n",
+    "        self.m=minc\n",
+    "        self.M=maxc\n",
+    "    \n",
+    "    def satisfied(self,neighs,central,ff=None,incomplete=True): #neighs is a string list of neighbour atom-types\n",
+    "        c=0\n",
+    "        for n in neighs:\n",
+    "            if type(n)!=str: nobj=n.atomtype\n",
+    "            else: nobj=n\n",
+    "            if nobj in self.targets: c+=1\n",
+    "        return c<=self.M and c>=self.m or (incomplete and ((ff is None) or ff.getMaxValency(central)-len(neighs)>=self.m-c))\n",
+    "    def __str__(self): return \"Rule: \"+str(self.targets)+\": Min=\"+str(self.m)+(\" Max=\"+str(self.M) if self.M<100 else \"\")\n",
+    "    def __repr__(self): return str(self)\n",
+    "\n",
+    "def loadRule(rulestr,ff,central=None):\n",
+    "    keys=rulestr.split()\n",
+    "    keys[0]=keys[0].strip()\n",
+    "    if keys[0][0]=='@': return None\n",
+    "    \n",
+    "    targ=ff.expandTarget(keys[0],central)\n",
+    "    mv=int(keys[1].strip())\n",
+    "    if len(keys)>2: Mv=int(keys[2].strip())\n",
+    "    else: Mv=100\n",
+    "    return DeNovoRule(targ,mv,Mv)\n",
+    "\n",
     "class DeNovoForceFieldLoader:\n",
     "    def __init__(self,ff_file):\n",
     "        self.infile=ff_file\n",
+    "        self.atom_list=dict()\n",
+    "        self.bonds=dict()\n",
+    "        self.categories=dict()\n",
+    "        self.rules=dict()\n",
     "        self.loadForceField()\n",
+    "        self.seeds=[]\n",
+    "        self.ind_list=dict()\n",
+    "        self.atom_inds=dict()\n",
     "    \n",
     "    def loadForceField(self):\n",
     "        tempfile = open(self.infile,\"r\")\n",
-    "        self.atom_list=[]\n",
     "        for l in tempfile:\n",
     "            l=l.strip()\n",
     "            if not l or l[0]==\"#\": continue\n",
     "            l = l.split()\n",
-    "            self.atom_list.append(DeNovoAtom(l[0],l[1],l[2],l[3],l[4],l[5],l[6],l[7]))\n",
+    "            self.atom_list[l[0].strip()]=DeNovoAtom(l[0],l[1],l[2],l[3],l[4],l[5],l[6],l[7])\n",
     "        tempfile.close()\n",
+    "    \n",
+    "    def updateKeyList(self):\n",
+    "        self.ind_list=dict()\n",
+    "        self.atom_inds=dict()\n",
+    "        for i,key in enumerate(self.atom_list):\n",
+    "            self.ind_list[i]=key\n",
+    "            self.atom_inds[key]=i\n",
+    "    def indexOfAtom(self,atstr): return self.atom_inds[atstr]\n",
+    "    def getAtomNameAt(self,ind): return self.ind_list[ind]\n",
+    "    def expandTarget(self,tgstr,central=None):\n",
+    "        els=tgstr.split(\"|\")\n",
+    "        if len(els)>1: els=sum([self.expandTarget(sel.strip()) for sel in els],[])\n",
+    "        for i in range(len(els)):\n",
+    "            if els[i][0]=='[':\n",
+    "                catname=els[i][1:].strip()\n",
+    "                catname=catname[:-1].strip()\n",
+    "                els[i]=list(self.categories[catname])\n",
+    "            elif els[i][-1]=='*':\n",
+    "                prefix=els[i][:-1]\n",
+    "                lst=[]\n",
+    "                for atype in self.atom_list.keys():\n",
+    "                    if atype.startswith(prefix) and ((central is None) or self.canBond(atype,central)): lst.append(atype)\n",
+    "                els[i]=lst\n",
+    "            else: els[i]=[els[i]]\n",
+    "        els=sum(els,[])\n",
+    "        return els\n",
+    "        \n",
+    "    def loadBonds(self,bondfile):\n",
+    "        bf=open(bondfile,\"r\")\n",
+    "        for l in bf:\n",
+    "            l=l.split()\n",
+    "            l[0]=l[0].strip()\n",
+    "            l[1]=l[1].strip()\n",
+    "            if l[0] not in self.atom_list or l[1] not in self.atom_list: continue\n",
+    "            if l[0] not in self.bonds: self.bonds[l[0]]=[]\n",
+    "            if l[1] not in self.bonds: self.bonds[l[1]]=[]\n",
+    "            self.bonds[l[0]].append(l[1])\n",
+    "            if l[0]!=l[1]: self.bonds[l[1]].append(l[0])\n",
+    "        bf.close()\n",
+    "    \n",
+    "    def loadCategories(self,catfile):\n",
+    "        cf=open(catfile,\"r\")\n",
+    "        for l in cf:\n",
+    "            l=l.split()\n",
+    "            l=sum([lo.split(\"|\") for lo in l],[])\n",
+    "            self.categories[l[0].strip()]=tuple(l[1:])\n",
+    "        cf.close()\n",
+    "    def loadRules(self,rulefile,catfile=None):\n",
+    "        if catfile is not None: self.loadCategories(catfile)\n",
+    "        rf = open(rulefile,\"r\")\n",
+    "        for l in rf:\n",
+    "            l=l.split()\n",
+    "            atype=l[0].strip()\n",
+    "            if atype not in self.rules: self.rules[atype]=[]\n",
+    "            rules=' '.join(l[1:])\n",
+    "            rules=rules.split(\";\")\n",
+    "            for rule in rules:\n",
+    "                robj=loadRule(rule,self,atype)\n",
+    "                if robj is not None: self.rules[atype].append(robj)\n",
+    "        rf.close()\n",
+    "    \n",
+    "    def canBond(self,a1,a2): return a1 in self.bonds and a2 in self.bonds[a1]\n",
+    "    def getBondableAtoms(self,at):\n",
+    "        if type(at)!=str: at=at.atomtype\n",
+    "        return self.bonds[at]\n",
+    "    def getMaxValency(self,a1): return self.atom_list[a1].max_valence\n",
+    "    def isSatisfied(self,cent,neighs,incomplete=True):\n",
+    "        if type(cent)!=str: cent=cent.atomtype\n",
+    "        if len(neighs)>self.atom_list[cent].max_valence: return False\n",
+    "        if cent not in self.rules: return True\n",
+    "        \n",
+    "        for rule in self.rules[cent]:\n",
+    "            if not rule.satisfied(neighs,cent,self,incomplete):\n",
+    "                return False\n",
+    "        return True\n",
     "    \n",
     "    def __len__(self): return len(self.atom_list)\n",
     "    def __getitem__(self,idx): return self.atom_list[idx]\n",
     "    def __contains__(self,atype):\n",
     "        if type(atype)!=str: atype=atype.atomtype\n",
-    "        for aobj in self.atom_list:\n",
-    "            if aobj.atomtype==atype: return True\n",
-    "        return False\n",
+    "        return atype in self.atom_list\n",
+    "    def getAtomNames(self): return self.atom_list.keys()\n",
+    "    def getNewAtom(self,name): return self.atom_list[name].clone()\n",
+    "    def assignSeeds(self,seedlist): self.seeds=tuple(seedlist)\n",
+    "    def getSeeds(self): return self.seeds\n",
+    "    \n",
     "\n",
     "class DeNovoMolecule:\n",
-    "    def __init__(self,pdbfile,ff,bond_cutoff=0.27):\n",
+    "    def __init__(self,pdbfile=None,ff=None,bond_cutoff=0.27,includeHs=True,readConects=True,proximalBonding=True):\n",
     "        self.molfile=pdbfile\n",
     "        self.ff=ff\n",
-    "        self.loadMolecule(cutoff=bond_cutoff)\n",
+    "        self.atoms=dict()\n",
+    "        self.bonds=dict()\n",
+    "        self.adj=None\n",
+    "        self.featmat=None\n",
+    "        self.loadMolecule(cutoff=bond_cutoff,includeHs=includeHs,readConects=readConects,proximalBonding=proximalBonding)\n",
     "    \n",
-    "    def loadMolecule(self,cutoff=0.27):\n",
-    "        tempfile = open(self.infile,\"r\")\n",
-    "        tempfile.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "cd8150c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "myff=DeNovoForceFieldLoader(\"/home/venkata/dnv/data/final_ff_parameters.ffin\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "b48ec5e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myff[-1] in myff"
+    "    def loadMolecule(self,cutoff=0.27,includeHs=True,readConects=True,proximalBonding=True):\n",
+    "        if (not includeHs) and proximalBonding:\n",
+    "            print(\"Disabling proximal bonding without hydrogen atoms\")\n",
+    "            proximalBonding=False\n",
+    "        self.atoms=dict()\n",
+    "        poses=[]\n",
+    "        self.bonds=dict()\n",
+    "        if self.molfile is None: return\n",
+    "        tempfile = open(self.molfile,\"r\")\n",
+    "        for ln in tempfile:\n",
+    "            ln=ln.strip()\n",
+    "            if not (ln[:6]==\"ATOM  \" or ln[:6]==\"HETATM\"):\n",
+    "                if (not readConects) or (ln[:6]!=\"CONECT\"): continue\n",
+    "                ind1=int(ln[7:11])\n",
+    "                rest=ln[12:].split()\n",
+    "                rest=[int(ind) for ind in rest]\n",
+    "                self.atoms[ind1].reduceValency(len(rest))\n",
+    "                self.bonds[ind1]+=rest\n",
+    "                continue\n",
+    "            elem=ln[12:16].strip()\n",
+    "            idx=int(ln[6:11])\n",
+    "            xc=float(ln[32:39])\n",
+    "            yc=float(ln[39:46])\n",
+    "            zc=float(ln[47:54])\n",
+    "            if (not includeHs) and (elem[0]==\"H\"): continue\n",
+    "            self.atoms[idx]=self.ff.getNewAtom(elem)\n",
+    "            poses.append(np.array([xc,yc,zc]))\n",
+    "            self.bonds[idx]=[]\n",
+    "        tempfile.close()\n",
+    "        effcut2=(cutoff*10)**2 #Square of \"effective\" (in A instead of nm) cut-off distance squared\n",
+    "        if proximalBonding:\n",
+    "            keylist=list(self.atoms.keys())\n",
+    "            proxima=dict()\n",
+    "            for i,pos1 in enumerate(poses):\n",
+    "                proxima[keylist[i]]=[]\n",
+    "                for j,pos2 in enumerate(poses):\n",
+    "                    if i>=j: continue\n",
+    "                    distv=np.sum((pos2-pos1)**2)\n",
+    "                    if distv<effcut2:\n",
+    "                        proxima[keylist[i]].append((keylist[j],distv))\n",
+    "                        \n",
+    "                if len(proxima[keylist[i]]):\n",
+    "                    proxima[keylist[i]]=sorted(proxima[keylist[i]],key=lambda el: el[1])\n",
+    "                    proxima[keylist[i]]=proxima[keylist[i]][:self.atoms[keylist[i]].valence]\n",
+    "                    for atnh in proxima[keylist[i]]:\n",
+    "                        j=atnh[0]\n",
+    "                        self.bonds[keylist[i]].append(j)\n",
+    "                        self.bonds[j].append(keylist[i])\n",
+    "                        self.atoms[keylist[i]].reduceValency()\n",
+    "                        self.atoms[j].reduceValency()\n",
+    "                        \n",
+    "                        \n",
+    "    \n",
+    "    def getSize(self): return len(self.atoms)\n",
+    "    def getNeighboursOf(self,elid): return (self.atoms[idx] for idx in self.bonds[elid])\n",
+    "    \n",
+    "    def getAdjacencyMatrix(self):\n",
+    "        if self.adj is not None: return self.adj\n",
+    "        self.adj=np.zeros((len(self.atoms),len(self.atoms)),dtype=np.float32)\n",
+    "        atids=list(self.atoms.keys())\n",
+    "        for i,k in enumerate(atids):\n",
+    "            for nhid in self.bonds[k]: self.adj[i,atids.index(nhid)]=1.\n",
+    "        return self.adj\n",
+    "    \n",
+    "    def getNodeMatrix(self,featurizer,*featargs):\n",
+    "        if self.featmat is not None: return self.featmat\n",
+    "        if featurizer.feat_type==\"atom\":\n",
+    "            #featurizer is a function that takes Atom object and list of Atom objects (neighbours) with any other optional parameters as per design to produce an encoding/representation numpy array for the node\n",
+    "            feats=[featurizer(self.atoms[node],self.getNeighboursOf(node),*featargs) for node in self.atoms]\n",
+    "            self.featmat=np.stack(feats) if len(feats) else np.zeros((0,0),dtype=np.float32)\n",
+    "        else:\n",
+    "            #Featurizer  instead acts on the entire Molecule Object\n",
+    "            self.featmat=featurizer(self)\n",
+    "        return self.featmat\n",
+    "    \n",
+    "    def getGraphFeatures(self,featurizer): return self.getNodeMatrix(),self.getAdjacencyMatrix()\n",
+    "    def getNodeIndex(self,keyidx):\n",
+    "        #Convert key index to row number\n",
+    "        return list(self.atoms.keys()).index(keyidx)\n",
+    "\n",
+    "class GrowingDeNovoMolecule(DeNovoMolecule):\n",
+    "    def __init__(self,maxsize,feat,feat_dim,pdbfile=None,ff=None,bond_cutoff=0.27,includeHs=True,readConects=True,proximalBonding=True):\n",
+    "        super(GrowingDeNovoMolecule,self).__init__(pdbfile,ff,bond_cutoff,includeHs,readConects,proximalBonding)\n",
+    "        self.maxsize=maxsize\n",
+    "        self.featurizer=feat\n",
+    "        assert self.featurizer.feat_type==\"atom\", \"Featurizer must be atom-level for a growing molecule\"\n",
+    "        self.getNodeMatrix(featurizer=self.featurizer)\n",
+    "        self.getAdjacencyMatrix()\n",
+    "        if self.featmat.shape[0]==0: self.featmat=np.zeros((0,feat_dim))\n",
+    "        self.bondables=[]\n",
+    "        for k in self.atoms:\n",
+    "            if self.atoms[k].valence: self.bondables.append(k)\n",
+    "    \n",
+    "    def addAtom(self,atomname,toatoms): #toatom is the index\n",
+    "        if type(toatoms)!=list: toatoms=[toatoms]\n",
+    "        nat=self.ff.getNewAtom(atomname)\n",
+    "        neighs=[]\n",
+    "        keylist=list(self.atoms.keys())\n",
+    "        mykey=keylist[-1]+1 if len(keylist) else 1\n",
+    "        self.atoms[mykey]=nat\n",
+    "        self.bonds[mykey]=[]\n",
+    "        keylist.append(mykey)\n",
+    "        self.adj=np.concatenate((self.adj,np.zeros((1,self.adj.shape[1]))))\n",
+    "        self.adj=np.concatenate((self.adj,np.zeros((self.adj.shape[0],1))),axis=1)\n",
+    "        for nid in toatoms:\n",
+    "            neighs.append(self.atoms[nid])\n",
+    "            if not self.addBond(mykey,nid,keylist):\n",
+    "                self.atoms.pop(mykey)\n",
+    "                self.bonds.pop(mykey)\n",
+    "                self.adj=self.adj[:len(self.adj)-1,:len(self.adj)-1]\n",
+    "                return False\n",
+    "        feat=self.featurizer(nat,neighs)\n",
+    "        if self.featmat is not None:\n",
+    "            self.featmat=np.concatenate((self.featmat,feat[np.newaxis,:]))\n",
+    "        if self.atoms[mykey].valence: self.bondables.append(mykey)\n",
+    "        return True\n",
+    "        \n",
+    "        \n",
+    "    def addBond(self,id1,id2,keylist=None):\n",
+    "        if self.atoms[id1].valence==0 or self.atoms[id2].valence==0: return False\n",
+    "        self.bonds[id1].append(id2)\n",
+    "        self.bonds[id2].append(id1)\n",
+    "        self.atoms[id1].reduceValency()\n",
+    "        self.atoms[id2].reduceValency()\n",
+    "        if self.adj is not None:\n",
+    "            if keylist is None: keylist=list(self.atoms.keys())\n",
+    "            i1,i2=keylist.index(id1),keylist.index(id2)\n",
+    "            self.adj[i1,i2]=1.\n",
+    "            self.adj[i2,i1]=1.\n",
+    "        if id1 in self.bondables and self.atoms[id1].valence==0: self.bondables.remove(id1)\n",
+    "        if id2 in self.bondables and self.atoms[id2].valence==0: self.bondables.remove(id2)\n",
+    "        return True\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "class GenericAtomFeaturizer(metaclass=abc.ABCMeta):\n",
+    "    def __init__(self):\n",
+    "        self.feat_type=\"atom\"\n",
+    "    \n",
+    "    @abc.abstractmethod\n",
+    "    def featurize(self,node,neighs,*args): pass\n",
+    "    \n",
+    "    def __call__(self,node,neighs=None,*args): return self.featurize(node,neighs,*args)\n",
+    "    \n",
+    "class FFOneHotFeaturizer(GenericAtomFeaturizer):\n",
+    "    def __init__(self,ff):\n",
+    "        super(FFOneHotFeaturizer,self).__init__()\n",
+    "        self.ff=ff\n",
+    "        self.atomnames=tuple(self.ff.atom_list.keys())\n",
+    "        self.sz=len(self.atomnames)\n",
+    "        \n",
+    "    def featurize(self,node,neighs,dtype=np.float32):\n",
+    "        ret=np.zeros(self.sz,dtype=dtype)\n",
+    "        ret[self.atomnames.index(node.atomtype)]=1.\n",
+    "        return ret"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c68c9f02",
+   "id": "cd8150c1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "myff=DeNovoForceFieldLoader(\"/home/venkata/dnv/data/final_ff_parameters.ffin\")\n",
+    "myff.loadBonds(\"/home/venkata/dnv/data/itps/bondtypes.itp\")\n",
+    "myff.loadCategories(\"/home/venkata/dnv/data/categories.data\")\n",
+    "myff.loadRules(\"/home/venkata/dnv/data/definitions.data\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "myfeat=FFOneHotFeaturizer(myff)\n",
+    "mymol=DeNovoMolecule(\"/home/venkata/CADD/data_files/PDBs/result_prot_dnv_CheMBLdist_size11_10000.pdb\",ff=myff,includeHs=True)\n",
+    "for i in mymol.atoms: print(i,mymol.atoms[i].atomtype,myff.isSatisfied(mymol.atoms[i],tuple(mymol.getNeighboursOf(i))))\n",
+    "'''\n",
+    "print(\"DeNovo Reader loaded\")"
+   ]
   }
  ],
  "metadata": {
