Made python exports

--- a/CADD/DeNovoGenerativeGraphs.ipynb
+++ b/CADD/DeNovoGenerativeGraphs.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d2a80061",
+   "execution_count": 1,
+   "id": "a5dc9d96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,32 +12,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "16536002",
+   "execution_count": 2,
+   "id": "eb5cf438",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/home/venkata/python/python_libraries/CADD', '/home/venkata/python/python_libraries/CADD', '/home/venkata/python/python_libraries', '/home/venkata/miniconda3/envs/my-torch-test/lib/python310.zip', '/home/venkata/miniconda3/envs/my-torch-test/lib/python3.10', '/home/venkata/miniconda3/envs/my-torch-test/lib/python3.10/lib-dynload', '', '/home/venkata/miniconda3/envs/my-torch-test/lib/python3.10/site-packages']\n",
+      "DeNovo Reader loaded\n",
+      "Reinforcement Module Loaded\n",
+      "PyTorch Commons Loaded\n"
+     ]
+    }
+   ],
    "source": [
-    "try:\n",
-    "    if GLOBAL_LOADED_DENOVOREAD: pass\n",
-    "except NameError:\n",
-    "    %run /home/venkata/python/python_libraries/CADD/DeNovoReader.ipynb\n",
-    "try:\n",
-    "    if GLOBAL_LOADED_REINFORCE: pass\n",
-    "except NameError:\n",
-    "    %run /home/venkata/python/python_libraries/python/Reinforcement_Module.ipynb\n",
-    "\n",
-    "try:\n",
-    "    if GLOBAL_LOADED_TORCHNETS: pass\n",
-    "except NameError:\n",
-    "    %run /home/venkata/python/python_libraries/python/TorchNetworks.ipynb\n",
+    "from CADD.DeNovoReader import *\n",
+    "from python.Reinforcement import *\n",
+    "from python.TorchNetworks import * #Handles all the torch imports (mostly)\n",
     "\n",
     "DEVICE=torch.device(\"cuda\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "893491ed",
+   "execution_count": 3,
+   "id": "02cbbd58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c624d815",
+   "execution_count": 4,
+   "id": "fba449c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,8 +127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1f970aaf",
+   "execution_count": 5,
+   "id": "a389df90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,10 +174,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5df99bd4",
+   "execution_count": 6,
+   "id": "e084f5b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1.],\n",
+       "       [1., 0.]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myff=DeNovoForceFieldLoader(\"/home/venkata/dnv/data/final_ff_parameters.ffin\")\n",
     "myff.loadBonds(\"/home/venkata/dnv/data/itps/bondtypes.itp\")\n",
@@ -200,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca778c71",
+   "id": "81a911a2",
    "metadata": {},
    "outputs": [],
    "source": [
