Added feat size (feat_dim) feature requirement for atom featurizer

--- a/CADD/DeNovoGenerativeGraphs.ipynb
+++ b/CADD/DeNovoGenerativeGraphs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a5dc9d96",
    "metadata": {},
    "outputs": [],
@@ -12,21 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "eb5cf438",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/home/venkata/python/python_libraries/CADD', '/home/venkata/python/python_libraries/CADD', '/home/venkata/python/python_libraries', '/home/venkata/miniconda3/envs/my-torch-test/lib/python310.zip', '/home/venkata/miniconda3/envs/my-torch-test/lib/python3.10', '/home/venkata/miniconda3/envs/my-torch-test/lib/python3.10/lib-dynload', '', '/home/venkata/miniconda3/envs/my-torch-test/lib/python3.10/site-packages']\n",
-      "DeNovo Reader loaded\n",
-      "Reinforcement Module Loaded\n",
-      "PyTorch Commons Loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from CADD.DeNovoReader import *\n",
     "from python.Reinforcement import *\n",
@@ -37,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "02cbbd58",
    "metadata": {},
    "outputs": [],
@@ -45,7 +34,9 @@
     "class GraphConvFeaturizer(nn.Module,GenericAtomFeaturizer):\n",
     "    def __init__(self,feat_dim,max_nodes,ff,convmodel=None,embed=None,amplify=1):\n",
     "        #embed is a model that produces a feat_dim vector using the Molecule's featurizer. It is expected to be an object of the GenericAtomFeaturizer parent class\n",
-    "        super(GraphConvFeaturizer,self).__init__()\n",
+    "        nn.Module.__init__(self)\n",
+    "        GenericAtomFeaturizer.__init__(self,feat_dim)\n",
+    "        #super(GraphConvFeaturizer,self).__init__()\n",
     "        self.feat_type=\"mol\" #Molecule Level Featurizer\n",
     "        self.ff=ff\n",
     "        self.maxsize=max_nodes\n",
@@ -77,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fba449c8",
    "metadata": {},
    "outputs": [],
@@ -127,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a389df90",
    "metadata": {},
    "outputs": [],
@@ -174,29 +165,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e084f5b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True True\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 1.],\n",
-       "       [1., 0.]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myff=DeNovoForceFieldLoader(\"/home/venkata/dnv/data/final_ff_parameters.ffin\")\n",
     "myff.loadBonds(\"/home/venkata/dnv/data/itps/bondtypes.itp\")\n",
