--- a/CADD/DeNovoReader.ipynb
+++ b/CADD/DeNovoReader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c84b95ad",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b51d5ff8",
    "metadata": {},
    "outputs": [],
@@ -290,6 +290,9 @@
     "        for k in self.atoms:\n",
     "            if self.atoms[k].valence: self.bondables.append(k)\n",
     "    \n",
+    "    def getFocus(self,priority=None):\n",
+    "        if priority is not None and self.atoms[priority].valence: return priority\n",
+    "        return np.random.choice(self.bondables) if len(self.bondables) else None\n",
     "    def addAtom(self,atomname,toatoms): #toatom is the index\n",
     "        if type(toatoms)!=list: toatoms=[toatoms]\n",
     "        nat=self.ff.getNewAtom(atomname)\n",
@@ -312,7 +315,7 @@
     "        if self.featmat is not None:\n",
     "            self.featmat=np.concatenate((self.featmat,feat[np.newaxis,:]))\n",
     "        if self.atoms[mykey].valence: self.bondables.append(mykey)\n",
-    "        return True\n",
+    "        return self.getFocus(priority=mykey)\n",
     "        \n",
     "        \n",
     "    def addBond(self,id1,id2,keylist=None):\n",
@@ -334,8 +337,9 @@
     "    \n",
     "    \n",
     "class GenericAtomFeaturizer(metaclass=abc.ABCMeta):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self,feat_dim=None):\n",
     "        self.feat_type=\"atom\"\n",
+    "        self.feat_dim=feat_dim\n",
     "    \n",
     "    @abc.abstractmethod\n",
     "    def featurize(self,node,neighs,*args): pass\n",
@@ -344,7 +348,7 @@
     "    \n",
     "class FFOneHotFeaturizer(GenericAtomFeaturizer):\n",
     "    def __init__(self,ff):\n",
-    "        super(FFOneHotFeaturizer,self).__init__()\n",
+    "        super(FFOneHotFeaturizer,self).__init__(len(ff.atom_list))\n",
     "        self.ff=ff\n",
     "        self.atomnames=tuple(self.ff.atom_list.keys())\n",
     "        self.sz=len(self.atomnames)\n",
