Molecule gym - Fixed focal atom selection

--- a/CADD/DeNovoGenerativeGraphs.ipynb
+++ b/CADD/DeNovoGenerativeGraphs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a5dc9d96",
    "metadata": {},
    "outputs": [],
@@ -12,10 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "eb5cf438",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DeNovo Reader loaded\n",
+      "Reinforcement Module Loaded\n",
+      "PyTorch Commons Loaded\n"
+     ]
+    }
+   ],
    "source": [
     "from CADD.DeNovoReader import *\n",
     "from python.Reinforcement import *\n",
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "02cbbd58",
    "metadata": {},
    "outputs": [],
@@ -52,7 +62,7 @@
     "        edges[:len(nodes),:len(nodes)]=torch.tensor(mol.getAdjacencyMatrix(),dtype=torch.float32,device=DEVICE)\n",
     "        nodes=torch.cat([nodes,torch.zeros((self.maxsize-len(nodes),nodes.shape[-1]),device=DEVICE,dtype=torch.float32)])\n",
     "        return nodes,edges\n",
-    "    def featurize(self,mols,neighs=None,*args):\n",
+    "    def getFeaturesMultiple(self,mols):\n",
     "        nodes=[]\n",
     "        edges=[]\n",
     "        for mol in mols:\n",
@@ -61,6 +71,9 @@
     "            edges.append(ed)\n",
     "        nodes=torch.stack(nodes)\n",
     "        edges=torch.stack(edges)\n",
+    "        return nodes,edges\n",
+    "    def featurize(self,mols,neighs=None,*args):\n",
+    "        nodes,edges = self.getFeaturesMultiple(mols)\n",
     "        return self.forward(nodes,edges)\n",
     "    \n",
     "    def forward(self,nodes,edges): return self.conv(nodes,edges),edges"
@@ -68,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fba449c8",
    "metadata": {},
    "outputs": [],
@@ -118,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a389df90",
    "metadata": {},
    "outputs": [],
@@ -165,11 +178,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e084f5b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1.],\n",
+       "       [1., 0.]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\n",
     "myff=DeNovoForceFieldLoader(\"/home/venkata/dnv/data/final_ff_parameters.ffin\")\n",
     "myff.loadBonds(\"/home/venkata/dnv/data/itps/bondtypes.itp\")\n",
     "myff.loadCategories(\"/home/venkata/dnv/data/categories.data\")\n",
@@ -187,6 +220,27 @@
     "print(mymol.addAtom(\"CA\",[]),mymol.addAtom(\"CA\",1))\n",
     "mymol.adj\n",
     "#nodes,edges=myfeat.featurize([mymol],None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "43d692c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nex,eex = myfeat.getFeaturesMultiple([mymol])\n",
+    "conv_ts = torch.jit.trace_module(myfeat.cpu(),{\"forward\": [nex.cpu(),eex.cpu()]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "dc8932c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conv_ts.save(\"/home/venkata/python/torchscript_saves/convfeat.ts\")"
    ]
   },
   {
