--- a/CADD/General.ipynb
+++ b/CADD/General.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "class SequentialSMILESLoader:\n",
-    "    def __init__(self,smifilename,skip_failures=True,attach_names=False,count_max=True,default_batch=1):\n",
+    "    def __init__(self,smifilename,skip_failures=True,attach_names=False,count_max=True,default_batch=1,max_mols=-1):\n",
     "        self.filename=smifilename\n",
     "        self.file=open(smifilename,\"r\")\n",
     "        self.counter=0\n",
@@ -31,6 +31,8 @@
     "            self.file=open(smifilename,\"r\")\n",
     "        else: self.linecount= None\n",
     "        self.default_batch=default_batch\n",
+    "        self.mollim=max_mols\n",
+    "        self.skipcount=0\n",
     "    \n",
     "    def getFilename(self): return self.filename\n",
     "    def restartSequence(self,keep_location=False):\n",
@@ -43,6 +45,7 @@
     "        for ln in self.file:\n",
     "            self.counter+=1\n",
     "            K+=1\n",
+    "            self.skipcount+=1\n",
     "            if K>=num: break\n",
     "        else: self.ended=True\n",
     "            \n",
@@ -77,7 +80,7 @@
     "            if self.name: names.append(myname)\n",
     "            \n",
     "            self.counter+=1\n",
-    "            if self.counter-K-skip-empty==num: break\n",
+    "            if (self.counter-K-skip-empty==num) or (self.mollim>0 and self.counter-self.skipcount>=self.mollim): break\n",
     "        else: self.ended=True\n",
     "        \n",
     "        if self.name: return ret,names\n",
