SeqSmilesLoader can now accept molecule lists

--- a/CADD/General.ipynb
+++ b/CADD/General.ipynb
@@ -21,20 +21,26 @@
     "class SequentialSMILESLoader:\n",
     "    def __init__(self,smifilename,skip_failures=True,attach_names=False,count_max=True,default_batch=1,max_mols=-1):\n",
     "        self.filename=smifilename\n",
-    "        self.file=open(smifilename,\"r\")\n",
+    "        if type(smifilename)==str:\n",
+    "            self.file=open(smifilename,\"r\")\n",
+    "        else:\n",
+    "            self.file=None\n",
     "        self.counter=0\n",
     "        self.autoskip=skip_failures\n",
     "        self.name=attach_names\n",
     "        self.ended=False\n",
     "        if count_max:\n",
-    "            self.linecount=len(self.file.readlines())\n",
-    "            self.file=open(smifilename,\"r\")\n",
+    "            if self.file:\n",
+    "                self.linecount=len(self.file.readlines())\n",
+    "                self.file=open(smifilename,\"r\")\n",
+    "            else:\n",
+    "                self.linecount=len(smifilename) #Assuming input is a list of molecules\n",
     "        else: self.linecount= None\n",
     "        self.default_batch=default_batch\n",
     "        self.mollim=max_mols\n",
     "        self.skipcount=0\n",
     "    \n",
-    "    def getFilename(self): return self.filename\n",
+    "    def getFilename(self): return (self.filename if type(self.filename)==str else None)\n",
     "    def restartSequence(self,keep_location=False):\n",
     "        ret=SequentialSMILESLoader(self.filename,self.autoskip,self.name,self.linecount is None,self.default_batch)\n",
     "        if keep_location: ret.skipNext(self.counter)\n",
@@ -42,12 +48,17 @@
     "    \n",
     "    def skipNext(self,num=0):\n",
     "        K=0\n",
-    "        for ln in self.file:\n",
-    "            self.counter+=1\n",
-    "            K+=1\n",
-    "            self.skipcount+=1\n",
-    "            if K>=num: break\n",
-    "        else: self.ended=True\n",
+    "        if self.file is not None:\n",
+    "            for ln in self.file:\n",
+    "                self.counter+=1\n",
+    "                K+=1\n",
+    "                self.skipcount+=1\n",
+    "                if K>=num: break\n",
+    "            else: self.ended=True\n",
+    "        else:\n",
+    "            self.counter+=num\n",
+    "            self.skipcount+=num\n",
+    "            if self.counter>=len(self.filename): self.ended=True\n",
     "            \n",
     "    def getNext(self,num=0,as_smiles=False):\n",
     "        if num==0: num=self.default_batch\n",
@@ -60,6 +71,22 @@
     "        \n",
     "        if self.ended: return None\n",
     "        \n",
+    "        if self.file is None:\n",
+    "            retn=[]\n",
+    "            while len(retn)<num or num<0:\n",
+    "                self.counter+=1\n",
+    "                if self.counter>=len(self.filename) or (self.mollim>0 and self.counter>=self.mollim):\n",
+    "                    self.ended=True\n",
+    "                    break\n",
+    "                curmol=self.filename[self.counter]\n",
+    "                if type(curmol)==str and (not as_smiles):\n",
+    "                    try:\n",
+    "                        curmol=Chem.MolFromSmiles(curmol)\n",
+    "                    except:\n",
+    "                        continue\n",
+    "                retn.append(curmol)\n",
+    "            return retn\n",
+    "            \n",
     "        for ln in self.file:\n",
     "            ln=ln.strip().split()\n",
     "            if not len(ln):\n",
@@ -87,9 +114,11 @@
     "        else: return ret\n",
     "    \n",
     "    def drain(self,as_smiles=False): return self.getNext(-1,as_smiles)\n",
-    "    def __del__(self): self.file.close()\n",
+    "    def __del__(self):\n",
+    "        if self.file is not None:\n",
+    "            self.file.close()\n",
     "    \n",
-    "    def __help__(self): print(\"This is help\")"
+    "    def __help__(self): print(\"This is help. The sequential smiles loader can (ideally) work with both SMILES files and lists of molecules/smiles strings\")"
    ]
   },
   {
@@ -245,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
