--- a/extras/Math.ipynb
+++ b/extras/Math.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "927f5cb5",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 3,
    "id": "ed6d4825",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 4,
    "id": "1e2da699",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 5,
    "id": "520eb4d3",
    "metadata": {},
    "outputs": [],
@@ -165,6 +165,63 @@
     "    r=(np.max(ys)-np.min(ys))/(scaleY[1]-scaleY[0])\n",
     "    ys/=r\n",
     "    return xs,ys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7be51f5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setUnion(setlist):\n",
+    "    if not len(setlist): return set([])\n",
+    "    r=setlist[0]\n",
+    "    for s in setlist[1:]:\n",
+    "        r=r.union(s)\n",
+    "    return r\n",
+    "def enumerateNonintersectingSetCombinations(setlist,intersectfn=lambda s1,s2: len(s1.intersection(s2))!=0):\n",
+    "    if len(setlist)==1: return [setlist,[]]\n",
+    "    ret=[]\n",
+    "    fset=setlist[0]\n",
+    "    for c in enumerateNonintersectingSetCombinations(setlist[1:],intersectfn):\n",
+    "        #u=setUnion(c)\n",
+    "        ret.append(c)\n",
+    "        acc=True\n",
+    "        for mss in c:\n",
+    "            if intersectfn(fset,mss):\n",
+    "                acc=False\n",
+    "                break\n",
+    "        if acc: ret.append([fset]+c)\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a77d7a69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{5, 6, 7}]\n",
+      "[{1, 2, 3}, {5, 6, 7}]\n",
+      "[]\n",
+      "[{1, 2, 3}]\n",
+      "[{3, 4, 5}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "s1=set([1,2,3])\n",
+    "s2=set([3,4,5])\n",
+    "s3=set([5,6,7])\n",
+    "for sc in enumerateNonintersectingSetCombinations([s1,s2,s3]): print(sc)\n",
+    "'''\n",
+    "print(\"Loaded Math library\")"
    ]
   }
  ],
